# genedit-frontend

./: .gitignore  main.py  pyproject.toml
client/: __init__.py  generation.py  models.py  object_detection.py  segmentation.py  utils.py
