[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=1.0.2",
    "langchain-openai>=1.0.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "pyqt6>=6.10.0",
    "pyside6>=6.10.0",
]
